<resources>
    <string name="app_name">Shanvi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signal_button">Connect</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="respond">Respond</string>
    <string name="response">Response</string>
    <string name="relationship">Relationship</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="location">Location</string>
    <string name="devices">Devices</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="dtype">Device Type</string>
    <string name="ckey">Confirmation Key</string>
    <string name="did">Device ID</string>
    <string name="valid">Valid Input</string>
    <string name="invalid">Invalid Input</string>
    <string name="buy">Buy</string>
    <string name="make">Make Device</string>
    <string name="users">Users</string>
    <string name="status">Status</string>
    <string name="role">Role</string>
    <string name="set">Set</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>

    <string name="action_about">About</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_add_device">ADD DEVICE</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="action_disconnecting">DISCONNECTING…</string>

    <string name="action_close_trigger">Close Trigger</string>

    <string name="battery">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_uri_application">There is no application that can open this URI.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>
    <string name="login_button">Login</string>
    <string name="trigger_button">Trigger</string>
    <string name="suggest_login">Login to ShanviShield.com</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_circle">My Safety Circle</string>
    <string name="title_activity_mytriggers">My Triggers</string>
    <string name="search_hint">Name</string>
    <string name="title_inputbox">Input Box</string>
    <string name="title_activity_base">Base</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_triggers">Triggers</string>
    <string name="title_activity_devices">Devices</string>
    <string name="title_activity_responses">Responses</string>
    <string name="title_activity_sales">Buy Devices</string>
    <string name="title_activity_pdevs">Purchased Devices</string>
    <string name="title_activity_mdevs">Make Devices</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_bletrigger">BLE Trigger</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_password1">Set A Password</string>
    <string name="prompt_password2">Type Password Again</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_zipcode">Zipcode</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_reset">Reset</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_add_user">Error during adding a user</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_nomatch_password">passwords you typed do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"permissions are needed"</string>
    <string name="main_test">Test</string>
    <string name="action_save_login">Save Login Information</string>
    <string name="logout_button">Logout</string>
    <string name="devices_button">Devices</string>
    <string name="sales_button">Buy</string>
    <string name="pdevs_button">pDevs</string>
    <string name="mdevs_button">mDevs</string>
    <string name="responses_button">Responses</string>
    <string name="triggers_button">Triggers</string>
    <string name="circle_button">Circle</string>
    <string name="mytriggers_button">MyTRGs</string>
    <string name="location_button">Loc</string>
    <string name="text_user_activity">User Activity</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>

</resources>
